src/objects/PostalCodeValidation__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PostalCodeValidation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PostalCodeValidation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>